// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon with className 1`] = `
<svg
  className="icon test-classname"
>
  <use
    className="icon-test"
    xlinkHref="#test"
  />
</svg>
`;

exports[`Icon with multiple className 1`] = `
<svg
  className="icon test-classname second-class third-class"
>
  <use
    className="icon-test"
    xlinkHref="#test"
  />
</svg>
`;

exports[`Icon without className 1`] = `
<svg
  className="icon"
>
  <use
    className="icon-test"
    xlinkHref="#test"
  />
</svg>
`;
